<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="topping">Topping</string>
    <string name="wizzed_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="space_rightCB">0dp</string>
    <string name="space_leftCB">26dp</string>
</resources>
