<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="haris.justjava.MainActivity"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName|text"
        android:layout_margin="16dp"
        android:textColorLink="#425ff4"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:text="@string/topping"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        style="@style/HeaderTextStyle"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"

        >

        <TableRow>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/whizzed_creamCB"
                />
            <TextView
                android:id="@+id/whizzed_creamTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizzed_cream"

                />

        </TableRow>


        <TableRow>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chocolateCB"/>

            <TextView
                android:id="@+id/chocolateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate" />

        </TableRow>



    </TableLayout>




    <TextView
        android:text="@string/quantity"
        android:layout_marginLeft="16dp"
        style="@style/HeaderTextStyle"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="-"
        android:onClick="decrement"
        />
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textAllCaps="true"
        android:textSize="16sp"

        android:textColor="@android:color/black"/>
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="+"
        android:layout_marginLeft="8dp"
        android:onClick="increment"
        />
</LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/order"
        android:onClick="submitOrder"
        />

</LinearLayout>
